@@ -7,9 +7,7 @@ add a graphical user interface (GUI) to the APS application. The GUI is
 implemented using the [javafx](https://openjfx.io/) library.
 
 [![Qodana](https://github.com/RPIFisherman/APS-app/actions/workflows/qodana_code_quality.yml/badge.svg)](https://github.com/RPIFisherman/APS-app/actions/workflows/qodana_code_quality.yml)
+[![Mirror GitHub Auto Queried Repos to Gitee](https://github.com/RPIFisherman/APS-app/actions/workflows/auto_sync.yml/badge.svg?branch=master)](https://github.com/RPIFisherman/APS-app/actions/workflows/auto_sync.yml)
 
-Add VM Option for JavaFX:
-
-```Intellij IDEA
---module-path <path-to-javafx-sdk> --add-modules javafx.controls,javafx.fxml
-```
+## Project Structure:
+![Project Structure](structure.png)
